// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Example Proof: vanilla-ssr > should match Development snapshots (Identity keys) > vanilla-ssr/dev-transforms/index.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>vanilla-ssr</title>
    <!--app-head-->
  </head>
  <body>
    <div id="app"><!--app-html--></div>
    <script type="module" src="/src/entry-client.ts"></script>
  </body>
</html>"
`;

exports[`Example Proof: vanilla-ssr > should match Development snapshots (Identity keys) > vanilla-ssr/dev-transforms/src/counter.ts 1`] = `
"import { _t } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_src_entry_client from "virtual:zintl/manager/none/entry:b_src_entry_client";
export function setupCounter(element: HTMLButtonElement) {
  let counter = 0;
  const setCounter = (count: number) => {
    counter = count;
    element.innerHTML = _t("Count is {counter}", { counter: counter }, { _mgr: _zintl_mgr_b_src_entry_client, _bId: "b_src_counter_setupCounter" });
  };
  element.addEventListener("click", () => setCounter(counter + 1));
  setCounter(0);
}"
`;

exports[`Example Proof: vanilla-ssr > should match Development snapshots (Identity keys) > vanilla-ssr/dev-transforms/src/entry-client.ts 1`] = `
"import { loadI18nInstance } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_src_entry_client from "virtual:zintl/manager/none/entry:b_src_entry_client";
import "./style.css";
import { setupCounter } from "./counter";


await (globalThis.__zintl_inst = loadI18nInstance({ loaders: { ["b_src_entry_client"]: _zintl_mgr_b_src_entry_client.loader } }));
setupCounter(document.querySelector("#counter") as HTMLButtonElement);


if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    console.debug("[Zintl] HMR update accepted for: src/entry-client");
  });
}"
`;

exports[`Example Proof: vanilla-ssr > should match Development snapshots (Identity keys) > vanilla-ssr/dev-transforms/src/entry-server.ts 1`] = `
"import { _t, loadI18nInstance } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_src_entry_server_render from "virtual:zintl/manager/none/entry:b_src_entry_server_render";
import _zintl_mgr_b_src_entry_client from "virtual:zintl/manager/none/entry:b_src_entry_client";
import typescriptLogo from "./assets/typescript.svg";
import viteLogo from "./assets/vite.svg";
import heroImg from "./assets/hero.png";

import { LocaleSwitcher } from "./switcher";

export async function render(_url: string) {
  await (globalThis.__zintl_inst = loadI18nInstance({ loaders: { ["b_src_entry_client"]: _zintl_mgr_b_src_entry_client.loader, ["b_src_entry_server_render"]: _zintl_mgr_b_src_entry_server_render.loader } }));

  const res = {
    text: \`
    <section id="header">
      <div class="switcher">\${LocaleSwitcher(_url)}</div>
      <div class="vertical-ticks"></div>
      <div class="icon-border"><svg class="icon" role="img" aria-hidden="true"><use href="/icons.svg#translate-icon"></use></svg></div>
    </section>

    <div class="ticks"></div>

    <section id="center">
      <div class="hero">
        <img src="\${heroImg}" class="base" width="170" height="179" />
        <img src="\${typescriptLogo}" class="framework" alt="TypeScript logo" />
        <img src="\${viteLogo}" class="vite" alt="Vite logo" />
      </div>
      <div>
        <h1>\${_t("Get started", { _mgr: _zintl_mgr_b_src_entry_server_render, _bId: "b_src_entry_server_render" })}</h1>
        <p>\${_t("Edit <code>src/main.ts</code> and save to test <code>HMR</code>", { _mgr: _zintl_mgr_b_src_entry_server_render, _bId: "b_src_entry_server_render", _tags: [{"alias":"code","originalOpen":"<code>","tagName":"code"}] })}</p>
      </div>
      <button id="counter" type="button" class="counter"></button>
    </section>

    <div class="ticks"></div>

    <section id="next-steps">
      <div id="docs">
        <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#documentation-icon"></use></svg>
        <h2>\${_t("Documentation", { _mgr: _zintl_mgr_b_src_entry_server_render, _bId: "b_src_entry_server_render" })}</h2>
        <p>\${_t("Your questions, answered", { _mgr: _zintl_mgr_b_src_entry_server_render, _bId: "b_src_entry_server_render" })}</p>
        <ul>
          <li>
            <a href="https://vite.dev/" target="_blank">
              <img class="logo" src="\${viteLogo}" alt="" />
              \${_t("Explore Vite", { _mgr: _zintl_mgr_b_src_entry_server_render, _bId: "b_src_entry_server_render" })}
            </a>
          </li>
          <li>
            <a href="https://www.typescriptlang.org" target="_blank">
              <img class="button-icon" src="\${typescriptLogo}" alt="" />
              \${_t("Learn more", { _mgr: _zintl_mgr_b_src_entry_server_render, _bId: "b_src_entry_server_render" })}
            </a>
          </li>
        </ul>
      </div>
      <div id="social">
        <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#social-icon"></use></svg>
        <h2>\${_t("Connect with us", { _mgr: _zintl_mgr_b_src_entry_server_render, _bId: "b_src_entry_server_render" })}</h2>
        <p>\${_t("Join the Vite community", { _mgr: _zintl_mgr_b_src_entry_server_render, _bId: "b_src_entry_server_render" })}</p>
        <ul>
          <li><a href="https://github.com/vitejs/vite" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#github-icon"></use></svg>\${_t("GitHub", { _mgr: _zintl_mgr_b_src_entry_server_render, _bId: "b_src_entry_server_render" })}</a></li>
          <li><a href="https://chat.vite.dev/" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#discord-icon"></use></svg>\${_t("Discord", { _mgr: _zintl_mgr_b_src_entry_server_render, _bId: "b_src_entry_server_render" })}</a></li>
          <li><a href="https://x.com/vite_js" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#x-icon"></use></svg>\${_t("X.com", { _mgr: _zintl_mgr_b_src_entry_server_render, _bId: "b_src_entry_server_render" })}</a></li>
          <li><a href="https://bsky.app/profile/vite.dev" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#bluesky-icon"></use></svg>\${_t("Bluesky", { _mgr: _zintl_mgr_b_src_entry_server_render, _bId: "b_src_entry_server_render" })}</a></li>
        </ul>
      </div>
    </section>

    <div class="ticks"></div>
    <section id="spacer"></section>
  \`,
  };
  return { html: res.text };
}


if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    console.debug("[Zintl] HMR update accepted for: src/entry-server");
  });
}"
`;

exports[`Example Proof: vanilla-ssr > should match Development snapshots (Identity keys) > vanilla-ssr/dev-transforms/src/switcher.ts 1`] = `
"const locales = [
  { id: "en", name: "English" },
  { id: "ar", name: "العربية" },
  { id: "es", name: "Español" },
  { id: "zh", name: "中文" },
];

export function LocaleSwitcher(_url: string) {
  const lang = (_url.split("/")[1] as any) || "en";

  return locales
    .map(
      (l) => \`
    <button data-lang="\${l.id}" class="\${lang === l.id ? "active" : ""}">
      <a href="/\${l.id}/">\${l.name}</a>
    </button>
  \`,
    )
    .join("");

  // element.querySelectorAll("button").forEach((btn) => {
  //   btn.addEventListener("click", () => {
  //     const newLang = (btn as HTMLElement).dataset.lang!;
  //     window.history.pushState({}, "", \`/\${newLang}\`);
  //   });
  // });
}"
`;

exports[`Example Proof: vanilla-ssr > should match Development snapshots (Identity keys) > vanilla-ssr/dev-transforms/virtual:zintl/content/ar/entry:b_src_entry_client 1`] = `
"const catalog = {
    "b_src_counter_setupCounter": {
      "Count is {counter}": (params) => {
    const { counter } = params;
    return \`العدد هو \${params['counter']}\`;
  },
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["ar"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vanilla-ssr > should match Development snapshots (Identity keys) > vanilla-ssr/dev-transforms/virtual:zintl/content/ar/entry:b_src_entry_server_render 1`] = `
"const catalog = {
    "b_src_entry_server_render": {
      "Get started": "ابدأ الآن",
      "Edit <code>src/main.ts</code> and save to test <code>HMR</code>": "عدّل <code>src/main.ts</code> واحفظ لاختبار <code>HMR</code>",
      "Documentation": "وثائق",
      "Your questions, answered": "إجابات لأسئلتك",
      "Explore Vite": "استكشف Vite",
      "Learn more": "تعرف على المزيد",
      "Connect with us": "تواصل معنا",
      "Join the Vite community": "انضم إلى مجتمع Vite",
      "GitHub": "GitHub",
      "Discord": "Discord",
      "X.com": "X.com",
      "Bluesky": "Bluesky",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["ar"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vanilla-ssr > should match Development snapshots (Identity keys) > vanilla-ssr/dev-transforms/virtual:zintl/content/es/entry:b_src_entry_client 1`] = `
"const catalog = {
    "b_src_counter_setupCounter": {
      "Count is {counter}": (params) => {
    const { counter } = params;
    return \`La cuenta es \${params['counter']}\`;
  },
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["es"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vanilla-ssr > should match Development snapshots (Identity keys) > vanilla-ssr/dev-transforms/virtual:zintl/content/es/entry:b_src_entry_server_render 1`] = `
"const catalog = {
    "b_src_entry_server_render": {
      "Get started": "Empezar",
      "Edit <code>src/main.ts</code> and save to test <code>HMR</code>": "Editar <code>src/main.ts</code> y guardar para probar <code>HMR</code>",
      "Documentation": "Documentación",
      "Your questions, answered": "Tus preguntas, respondidas",
      "Explore Vite": "Explorar Vite",
      "Learn more": "Leer más",
      "Connect with us": "Conéctate con nosotros",
      "Join the Vite community": "Únete a la comunidad de Vite",
      "GitHub": "GitHub",
      "Discord": "Discord",
      "X.com": "X.com",
      "Bluesky": "Bluesky",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["es"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vanilla-ssr > should match Development snapshots (Identity keys) > vanilla-ssr/dev-transforms/virtual:zintl/content/zh/entry:b_src_entry_client 1`] = `
"const catalog = {
    "b_src_counter_setupCounter": {
      "Count is {counter}": (params) => {
    const { counter } = params;
    return \`计数为 \${params['counter']}\`;
  },
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["zh"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vanilla-ssr > should match Development snapshots (Identity keys) > vanilla-ssr/dev-transforms/virtual:zintl/content/zh/entry:b_src_entry_server_render 1`] = `
"const catalog = {
    "b_src_entry_server_render": {
      "Get started": "开始使用",
      "Edit <code>src/main.ts</code> and save to test <code>HMR</code>": "编辑 <code>src/main.ts</code> 并保存以测试 <code>HMR</code>",
      "Documentation": "文档",
      "Your questions, answered": "你的问题，已有答案",
      "Explore Vite": "探索 Vite",
      "Learn more": "了解更多",
      "Connect with us": "联系我们",
      "Join the Vite community": "加入 Vite 社区",
      "GitHub": "GitHub",
      "Discord": "Discord",
      "X.com": "X.com",
      "Bluesky": "Bluesky",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["zh"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vanilla-ssr > should match Development snapshots (Identity keys) > vanilla-ssr/dev-transforms/virtual:zintl/manager/none/entry:b_src_entry_client 1`] = `
"export default (() => {
  const manager = { id: "b_src_entry_client", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_src_counter_setupCounter": {
      "Count is {counter}": (params) => {
    const { counter } = params;
    return \`Count is \${params['counter']}\`;
  },
    },
  };
                case "ar":
          return import(/* @vite-ignore */ "virtual:zintl/content/ar/entry:b_src_entry_client").then(m => m.default);
        case "es":
          return import(/* @vite-ignore */ "virtual:zintl/content/es/entry:b_src_entry_client").then(m => m.default);
        case "zh":
          return import(/* @vite-ignore */ "virtual:zintl/content/zh/entry:b_src_entry_client").then(m => m.default);
        default: return {};
      }
    }, manifest: [] };
  if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
    globalThis.__zintl_active.registerLoader(manager.id, manager.loader);
  }
  return manager;
})();
if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    if (newModule?.default && typeof globalThis !== "undefined" && globalThis.__zintl_active) {
      globalThis.__zintl_active.registerLoader(newModule.default.id, newModule.default.loader);
    }
  });
}"
`;

exports[`Example Proof: vanilla-ssr > should match Development snapshots (Identity keys) > vanilla-ssr/dev-transforms/virtual:zintl/manager/none/entry:b_src_entry_server_render 1`] = `
"export default (() => {
  const manager = { id: "b_src_entry_server_render", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_src_entry_server_render": {
      "Get started": "Get started",
      "Edit <code>src/main.ts</code> and save to test <code>HMR</code>": "Edit <code>src/main.ts</code> and save to test <code>HMR</code>",
      "Documentation": "Documentation",
      "Your questions, answered": "Your questions, answered",
      "Explore Vite": "Explore Vite",
      "Learn more": "Learn more",
      "Connect with us": "Connect with us",
      "Join the Vite community": "Join the Vite community",
      "GitHub": "GitHub",
      "Discord": "Discord",
      "X.com": "X.com",
      "Bluesky": "Bluesky",
    },
  };
                case "ar":
          return import(/* @vite-ignore */ "virtual:zintl/content/ar/entry:b_src_entry_server_render").then(m => m.default);
        case "es":
          return import(/* @vite-ignore */ "virtual:zintl/content/es/entry:b_src_entry_server_render").then(m => m.default);
        case "zh":
          return import(/* @vite-ignore */ "virtual:zintl/content/zh/entry:b_src_entry_server_render").then(m => m.default);
        default: return {};
      }
    }, manifest: [] };
  if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
    globalThis.__zintl_active.registerLoader(manager.id, manager.loader);
  }
  return manager;
})();
if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    if (newModule?.default && typeof globalThis !== "undefined" && globalThis.__zintl_active) {
      globalThis.__zintl_active.registerLoader(newModule.default.id, newModule.default.loader);
    }
  });
}"
`;

exports[`Example Proof: vanilla-ssr > should match Development snapshots (Identity keys) > vanilla-ssr/dev-transforms/virtual:zintl/runtime/internal 1`] = `
"import { I18nStore, addCatalogs, getActiveInstance, getLocale, getStoreVersion, registerLoader, runInRequestScope, setActiveInstance, setLocale, subscribe, unregisterLoader } from "./store.js";
import { _t } from "./resolver.js";
import { registerZintlLoader } from "./registry.js";
//#region src/runtime/internal.ts
async function zintl(locale) {
	const activeLocale = locale || (typeof document !== "undefined" ? document.documentElement.lang : "");
	if (activeLocale) await setLocale(activeLocale);
}
/**
* Loads and configures the i18n instance for a boundary.
* Registers loaders and merges new catalogs into the existing state.
*
* INTERNAL: Targeted by the compiler after zintl() macro expansion.
*/
async function loadI18nInstance(config = {}) {
	const store = new I18nStore();
	setActiveInstance(store);
	if (typeof globalThis !== "undefined") globalThis.__zintl_active = store;
	try {
		if (config.debug !== void 0) store.debug = config.debug;
		if (config.locale) store.locale = config.locale;
		if (config.catalogs) {
			store.addCatalogs(config.catalogs);
			const active = getActiveInstance();
			if (active && active !== store) active.addCatalogs(config.catalogs);
		}
		const promises = [];
		if (config.loaders) for (const [boundaryId, loader] of Object.entries(config.loaders)) {
			const res = registerLoader(boundaryId, loader);
			if (res && typeof res.then === "function") promises.push(res);
		}
		if (config.locale) promises.push(store.setLocale(config.locale));
		if (promises.length > 0) await Promise.all(promises);
	} finally {}
	return {
		locale: store.locale,
		get debug() {
			return store.debug;
		},
		set debug(value) {
			store.debug = value;
		},
		setLocale: (l) => store.setLocale(l),
		subscribe: (cb) => store.subscribe(cb),
		t: (key, params) => {
			const prev = getActiveInstance();
			setActiveInstance(store);
			try {
				return _t(key, params);
			} finally {
				setActiveInstance(prev);
			}
		}
	};
}
//#endregion
export { _t, _t as t, addCatalogs, getLocale, getStoreVersion, loadI18nInstance, registerLoader, registerZintlLoader, runInRequestScope, setLocale, subscribe, unregisterLoader as unregisterZintlLoader, zintl };"
`;

exports[`Example Proof: vanilla-ssr > should match Final Client Production Build (dist) snapshots > vanilla-ssr/dist/ar/index.html 1`] = `
"<!doctype html>
<html lang="ar" dir="rtl">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>زينتل | مثال تطبيق الصفحة الواحدة مخبوز متعدد اللغات</title>
    <!--app-head-->
    <script type="module" crossorigin src="/assets/ar/index.js"></script>
    <link rel="modulepreload" crossorigin href="/assets/style.js">
    <link rel="stylesheet" crossorigin href="/assets/style-CUFt-qr9.css">
  </head>
  <body>
    <div id="app"><!--app-html--></div>
  </body>
</html>
"
`;

exports[`Example Proof: vanilla-ssr > should match Final Client Production Build (dist) snapshots > vanilla-ssr/dist/assets/ar/index.js 1`] = `
"import "../style.js";
//#region examples/vanilla-ssr/src/counter.ts?zintl-multiplex=ar
function setupCounter(element) {
	let counter = 0;
	const setCounter = (count) => {
		counter = count;
		element.innerHTML = \`العدد هو \${counter}\`;
	};
	element.addEventListener("click", () => setCounter(counter + 1));
	setCounter(0);
}
//#endregion
//#region examples/vanilla-ssr/src/entry-client.ts?zintl-multiplex=ar
setupCounter(document.querySelector("#counter"));
//#endregion
"
`;

exports[`Example Proof: vanilla-ssr > should match Final Client Production Build (dist) snapshots > vanilla-ssr/dist/assets/en/index.js 1`] = `
"import "../style.js";
//#region examples/vanilla-ssr/src/counter.ts?zintl-multiplex=en
function setupCounter(element) {
	let counter = 0;
	const setCounter = (count) => {
		counter = count;
		element.innerHTML = \`Count is \${counter}\`;
	};
	element.addEventListener("click", () => setCounter(counter + 1));
	setCounter(0);
}
//#endregion
//#region examples/vanilla-ssr/src/entry-client.ts?zintl-multiplex=en
setupCounter(document.querySelector("#counter"));
//#endregion
"
`;

exports[`Example Proof: vanilla-ssr > should match Final Client Production Build (dist) snapshots > vanilla-ssr/dist/assets/es/index.js 1`] = `
"import "../style.js";
//#region examples/vanilla-ssr/src/counter.ts?zintl-multiplex=es
function setupCounter(element) {
	let counter = 0;
	const setCounter = (count) => {
		counter = count;
		element.innerHTML = \`La cuenta es \${counter}\`;
	};
	element.addEventListener("click", () => setCounter(counter + 1));
	setCounter(0);
}
//#endregion
//#region examples/vanilla-ssr/src/entry-client.ts?zintl-multiplex=es
setupCounter(document.querySelector("#counter"));
//#endregion
"
`;

exports[`Example Proof: vanilla-ssr > should match Final Client Production Build (dist) snapshots > vanilla-ssr/dist/assets/style.js 1`] = `
"//#region \\0vite/modulepreload-polyfill.js
(function polyfill() {
	const relList = document.createElement("link").relList;
	if (relList && relList.supports && relList.supports("modulepreload")) return;
	for (const link of document.querySelectorAll("link[rel=\\"modulepreload\\"]")) processPreload(link);
	new MutationObserver((mutations) => {
		for (const mutation of mutations) {
			if (mutation.type !== "childList") continue;
			for (const node of mutation.addedNodes) if (node.tagName === "LINK" && node.rel === "modulepreload") processPreload(node);
		}
	}).observe(document, {
		childList: true,
		subtree: true
	});
	function getFetchOpts(link) {
		const fetchOpts = {};
		if (link.integrity) fetchOpts.integrity = link.integrity;
		if (link.referrerPolicy) fetchOpts.referrerPolicy = link.referrerPolicy;
		if (link.crossOrigin === "use-credentials") fetchOpts.credentials = "include";
		else if (link.crossOrigin === "anonymous") fetchOpts.credentials = "omit";
		else fetchOpts.credentials = "same-origin";
		return fetchOpts;
	}
	function processPreload(link) {
		if (link.ep) return;
		link.ep = true;
		const fetchOpts = getFetchOpts(link);
		fetch(link.href, fetchOpts);
	}
})();
//#endregion
"
`;

exports[`Example Proof: vanilla-ssr > should match Final Client Production Build (dist) snapshots > vanilla-ssr/dist/assets/zh/index.js 1`] = `
"import "../style.js";
//#region examples/vanilla-ssr/src/counter.ts?zintl-multiplex=zh
function setupCounter(element) {
	let counter = 0;
	const setCounter = (count) => {
		counter = count;
		element.innerHTML = \`计数为 \${counter}\`;
	};
	element.addEventListener("click", () => setCounter(counter + 1));
	setCounter(0);
}
//#endregion
//#region examples/vanilla-ssr/src/entry-client.ts?zintl-multiplex=zh
setupCounter(document.querySelector("#counter"));
//#endregion
"
`;

exports[`Example Proof: vanilla-ssr > should match Final Client Production Build (dist) snapshots > vanilla-ssr/dist/en/index.html 1`] = `
"<!doctype html>
<html lang="en" dir="ltr">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>vanilla-ssr</title>
    <!--app-head-->
    <script type="module" crossorigin src="/assets/en/index.js"></script>
    <link rel="modulepreload" crossorigin href="/assets/style.js">
    <link rel="stylesheet" crossorigin href="/assets/style-CUFt-qr9.css">
  </head>
  <body>
    <div id="app"><!--app-html--></div>
  </body>
</html>
"
`;

exports[`Example Proof: vanilla-ssr > should match Final Client Production Build (dist) snapshots > vanilla-ssr/dist/es/index.html 1`] = `
"<!doctype html>
<html lang="es">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Zintl | ejemplo básico de aplicación de página única</title>
    <!--app-head-->
    <script type="module" crossorigin src="/assets/es/index.js"></script>
    <link rel="modulepreload" crossorigin href="/assets/style.js">
    <link rel="stylesheet" crossorigin href="/assets/style-CUFt-qr9.css">
  </head>
  <body>
    <div id="app"><!--app-html--></div>
  </body>
</html>
"
`;

exports[`Example Proof: vanilla-ssr > should match Final Client Production Build (dist) snapshots > vanilla-ssr/dist/index.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Redirecting...</title>
    <script id="zintl-multiplex-redirect">
      (function() {
        try {
          const lang = (navigator.language || 'en').split('-')[0];
          const supported = ["en","ar","es","zh"];
          const parts = window.location.pathname.split('/').filter(Boolean);
          if (parts.length > 0 && supported.includes(parts[0])) return;
          const target = supported.includes(lang) ? lang : 'en';
          const path = window.location.pathname.replace(/^/+/, '');
          window.location.replace('/' + target + '/' + path + window.location.search + window.location.hash);
        } catch (e) {
          const supported = ["en","ar","es","zh"];
          const parts = window.location.pathname.split('/').filter(Boolean);
          if (parts.length > 0 && supported.includes(parts[0])) return;
          const path = window.location.pathname.replace(/^/+/, '');
          window.location.replace('/en/' + path);
        }
      })();
    </script>
  </head>
  <body>
  </body>
</html>"
`;

exports[`Example Proof: vanilla-ssr > should match Final Client Production Build (dist) snapshots > vanilla-ssr/dist/zh/index.html 1`] = `
"<!doctype html>
<html lang="zh" dir="ltr">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Zintl | 基础单页应用多语言示例</title>
    <!--app-head-->
    <script type="module" crossorigin src="/assets/zh/index.js"></script>
    <link rel="modulepreload" crossorigin href="/assets/style.js">
    <link rel="stylesheet" crossorigin href="/assets/style-CUFt-qr9.css">
  </head>
  <body>
    <div id="app"><!--app-html--></div>
  </body>
</html>
"
`;

exports[`Example Proof: vanilla-ssr > should match Final Server SSR Build (dist/server) snapshots > vanilla-ssr/dist-server/assets/entry_b_764631960fa9.js 1`] = `
"//#region \\0virtual:zintl/content/ar/entry:b_764631960fa9
var catalog = { "b_f05b8e5701f3": { "3aaf6932": (params) => {
	const { counter } = params;
	return \`العدد هو \${params["counter"]}\`;
} } };
//#endregion
export { catalog as default };
"
`;

exports[`Example Proof: vanilla-ssr > should match Final Server SSR Build (dist/server) snapshots > vanilla-ssr/dist-server/assets/entry_b_764631960fa92.js 1`] = `
"//#region \\0virtual:zintl/content/es/entry:b_764631960fa9
var catalog = { "b_f05b8e5701f3": { "3aaf6932": (params) => {
	const { counter } = params;
	return \`La cuenta es \${params["counter"]}\`;
} } };
//#endregion
export { catalog as default };
"
`;

exports[`Example Proof: vanilla-ssr > should match Final Server SSR Build (dist/server) snapshots > vanilla-ssr/dist-server/assets/entry_b_764631960fa93.js 1`] = `
"//#region \\0virtual:zintl/content/zh/entry:b_764631960fa9
var catalog = { "b_f05b8e5701f3": { "3aaf6932": (params) => {
	const { counter } = params;
	return \`计数为 \${params["counter"]}\`;
} } };
//#endregion
export { catalog as default };
"
`;

exports[`Example Proof: vanilla-ssr > should match Final Server SSR Build (dist/server) snapshots > vanilla-ssr/dist-server/assets/entry_b_f0c6267f2b46.js 1`] = `
"//#region \\0virtual:zintl/content/ar/entry:b_f0c6267f2b46
var catalog = { "b_f0c6267f2b46": {
	"90e40d50": "ابدأ الآن",
	"e2aae512": "عدّل <code>src/main.ts</code> واحفظ لاختبار <code>HMR</code>",
	"9e9cf322": "وثائق",
	"d0f7666b": "إجابات لأسئلتك",
	"e49cb0ee": "استكشف Vite",
	"824d76b1": "تعرف على المزيد",
	"65ac13a7": "تواصل معنا",
	"15545bc4": "انضم إلى مجتمع Vite",
	"5442e2b6": "GitHub",
	"bccc14ee": "Discord",
	"b3c83ea6": "X.com",
	"daf16c03": "Bluesky"
} };
//#endregion
export { catalog as default };
"
`;

exports[`Example Proof: vanilla-ssr > should match Final Server SSR Build (dist/server) snapshots > vanilla-ssr/dist-server/assets/entry_b_f0c6267f2b462.js 1`] = `
"//#region \\0virtual:zintl/content/es/entry:b_f0c6267f2b46
var catalog = { "b_f0c6267f2b46": {
	"90e40d50": "Empezar",
	"e2aae512": "Editar <code>src/main.ts</code> y guardar para probar <code>HMR</code>",
	"9e9cf322": "Documentación",
	"d0f7666b": "Tus preguntas, respondidas",
	"e49cb0ee": "Explorar Vite",
	"824d76b1": "Leer más",
	"65ac13a7": "Conéctate con nosotros",
	"15545bc4": "Únete a la comunidad de Vite",
	"5442e2b6": "GitHub",
	"bccc14ee": "Discord",
	"b3c83ea6": "X.com",
	"daf16c03": "Bluesky"
} };
//#endregion
export { catalog as default };
"
`;

exports[`Example Proof: vanilla-ssr > should match Final Server SSR Build (dist/server) snapshots > vanilla-ssr/dist-server/assets/entry_b_f0c6267f2b463.js 1`] = `
"//#region \\0virtual:zintl/content/zh/entry:b_f0c6267f2b46
var catalog = { "b_f0c6267f2b46": {
	"90e40d50": "开始使用",
	"e2aae512": "编辑 <code>src/main.ts</code> 并保存以测试 <code>HMR</code>",
	"9e9cf322": "文档",
	"d0f7666b": "你的问题，已有答案",
	"e49cb0ee": "探索 Vite",
	"824d76b1": "了解更多",
	"65ac13a7": "联系我们",
	"15545bc4": "加入 Vite 社区",
	"5442e2b6": "GitHub",
	"bccc14ee": "Discord",
	"b3c83ea6": "X.com",
	"daf16c03": "Bluesky"
} };
//#endregion
export { catalog as default };
"
`;

exports[`Example Proof: vanilla-ssr > should match Final Server SSR Build (dist/server) snapshots > vanilla-ssr/dist-server/assets/entry-server.js 1`] = `
"import { AsyncLocalStorage } from "node:async_hooks";
//#region \\0virtual:zintl/runtime/store-core
var storeStorage = null;
function setStoreStorage(storage) {
	storeStorage = storage;
}
var runInRequestScope$1 = (_urlOrReq, _locales, _defaultLocale, callback) => {
	return callback();
};
function setRunInRequestScope(fn) {
	runInRequestScope$1 = fn;
}
var I18nStore = class {
	locale = "";
	catalogs = {};
	locales = [];
	debug = typeof process !== "undefined" && process.env.ZINTL_DEBUG === "true" || false;
	pendingBoundaries = /* @__PURE__ */ new Set();
	pendingPromises = [];
	version = 0;
	listeners = /* @__PURE__ */ new Set();
	constructor() {
		if (typeof document !== "undefined" && document.documentElement) this.locale = document.documentElement.lang || "";
		if (!this.locale && typeof window !== "undefined") try {
			this.locale = localStorage.getItem("zintl-locale") || "";
		} catch {}
		if (!this.locale) try {
			if (storeStorage) {
				const active = storeStorage.getStore();
				if (active && active !== this) this.locale = active.locale;
			}
		} catch {}
		if (typeof window !== "undefined" && window.__zintl_baked_catalogs) this.addCatalogs(window.__zintl_baked_catalogs);
	}
	getLocales() {
		if (this.locales.length === 0 && typeof window !== "undefined" && window.__zintl_locales) this.locales = window.__zintl_locales;
		return this.locales;
	}
	subscribe(listener) {
		this.listeners.add(listener);
		return () => this.listeners.delete(listener);
	}
	notify() {
		this.listeners.forEach((l) => l());
	}
	addCatalogs(newCatalogs) {
		let changed = false;
		for (const [locale, boundaries] of Object.entries(newCatalogs)) {
			if (!this.catalogs[locale]) this.catalogs[locale] = {};
			for (const [boundaryId, messages] of Object.entries(boundaries)) {
				if (!this.catalogs[locale][boundaryId]) this.catalogs[locale][boundaryId] = {};
				for (const [key, value] of Object.entries(messages)) if (this.catalogs[locale][boundaryId][key] !== value) {
					this.catalogs[locale][boundaryId][key] = value;
					changed = true;
				}
			}
		}
		if (changed) {
			this.version++;
			this.notify();
		}
	}
	async setLocale(locale) {
		if (!locale) return;
		if (typeof window !== "undefined") {
			if (window.__zintlApplyHtml) window.__zintlApplyHtml(locale);
			try {
				localStorage.setItem("zintl-locale", locale);
			} catch {}
		}
		if (this.locale === locale && Object.keys(this.catalogs[locale] || {}).length > 0) return;
		this.locale = locale;
		const activePromises = [];
		for (const [boundaryId, loader] of globalRegistry.entries()) try {
			const result = loader(locale);
			const processResult = (res) => {
				if (!res) return;
				this.addCatalogs({ [locale]: res });
			};
			if (isThenable(result)) {
				this.pendingBoundaries.add(boundaryId);
				activePromises.push(result.then((res) => {
					processResult(res);
					this.pendingBoundaries.delete(boundaryId);
				}));
			} else processResult(result);
		} catch (err) {}
		if (activePromises.length > 0) {
			await Promise.all(activePromises);
			this.version++;
			this.notify();
		} else {
			this.version++;
			this.notify();
		}
	}
	registerLoader(boundaryId, loader) {
		globalRegistry.set(boundaryId, loader);
		const result = loader(this.locale);
		const processResult = (res) => {
			if (!res) return;
			this.addCatalogs({ [this.locale]: res });
		};
		if (isThenable(result)) {
			this.pendingBoundaries.add(boundaryId);
			return result.then((res) => {
				processResult(res);
				this.pendingBoundaries.delete(boundaryId);
			});
		} else processResult(result);
	}
	loadLazyBoundary(boundaryId, loader) {
		if (this.catalogs[this.locale]?.[boundaryId]) return;
		if (this.pendingBoundaries.has(boundaryId)) return;
		this.pendingBoundaries.add(boundaryId);
		try {
			const result = loader(this.locale);
			const processResult = (res) => {
				this.pendingBoundaries.delete(boundaryId);
				if (!res) return;
				this.addCatalogs({ [this.locale]: res });
			};
			if (isThenable(result)) {
				const p = result.then((res) => {
					processResult(res);
				}).catch(() => {
					this.pendingBoundaries.delete(boundaryId);
				});
				this.pendingPromises.push(p);
				return p;
			} else processResult(result);
		} catch {
			this.pendingBoundaries.delete(boundaryId);
		}
	}
};
var globalRegistry;
if (typeof globalThis !== "undefined") {
	if (!globalThis.__zintl_registry) globalThis.__zintl_registry = /* @__PURE__ */ new Map();
	globalRegistry = globalThis.__zintl_registry;
} else globalRegistry = /* @__PURE__ */ new Map();
var defaultInstance;
if (typeof globalThis !== "undefined") {
	if (!globalThis.__zintl_default_instance) globalThis.__zintl_default_instance = new I18nStore();
	defaultInstance = globalThis.__zintl_default_instance;
} else defaultInstance = new I18nStore();
var currentInstance = defaultInstance;
if (typeof globalThis !== "undefined") {
	if (!globalThis.__zintl_current_instance) globalThis.__zintl_current_instance = defaultInstance;
	currentInstance = globalThis.__zintl_current_instance;
}
function getActiveInstance() {
	if (storeStorage) {
		const store = storeStorage.getStore();
		if (store) return store;
	}
	if (typeof window === "undefined" && typeof globalThis !== "undefined" && globalThis.__zintl_active) return globalThis.__zintl_active;
	if (typeof globalThis !== "undefined" && globalThis.__zintl_current_instance) return globalThis.__zintl_current_instance;
	if (typeof window !== "undefined") {
		const inst = currentInstance;
		const locales = inst.getLocales();
		const docLang = typeof document !== "undefined" && document.documentElement ? document.documentElement.lang : "";
		let targetLocale = "";
		const pathname = window.location ? window.location.pathname : "";
		if (pathname && locales.length > 0) {
			const parts = pathname.split("/").filter(Boolean);
			if (parts.length > 0 && locales.includes(parts[0])) targetLocale = parts[0];
		}
		if (!targetLocale && docLang && locales.includes(docLang)) targetLocale = docLang;
		if (targetLocale && targetLocale !== inst.locale) inst.setLocale(targetLocale);
	}
	return currentInstance;
}
function setActiveInstance(instance) {
	currentInstance = instance;
	if (typeof globalThis !== "undefined") globalThis.__zintl_current_instance = instance;
}
function registerLoader(boundaryId, loader) {
	globalRegistry.set(boundaryId, loader);
	const instance = getActiveInstance();
	if (instance.catalogs[instance.locale]?.[boundaryId]) return;
	try {
		const result = loader(instance.locale);
		const processResult = (res) => {
			if (!res) return;
			instance.addCatalogs({ [instance.locale]: res });
		};
		if (isThenable(result)) {
			const p = result.then((res) => {
				processResult(res);
			});
			if (instance.pendingPromises) instance.pendingPromises.push(p);
			return p;
		} else processResult(result);
	} catch (err) {}
}
function isThenable(obj) {
	return obj && typeof obj.then === "function";
}
//#endregion
//#region \\0virtual:zintl/runtime/store-client
var syncLocale = () => {
	const inst = getActiveInstance();
	const locales = inst.getLocales();
	if (locales.length === 0) return;
	const pathname = window.location.pathname;
	if (pathname) {
		const parts = pathname.split("/").filter(Boolean);
		if (parts.length > 0 && locales.includes(parts[0])) {
			if (inst.locale !== parts[0]) {
				inst.setLocale(parts[0]);
				return;
			}
		}
	}
	if (typeof document !== "undefined" && document.documentElement) {
		const docLang = document.documentElement.lang;
		if (docLang && locales.includes(docLang) && inst.locale !== docLang) inst.setLocale(docLang);
	}
};
if (typeof window !== "undefined") {
	window.addEventListener("popstate", syncLocale);
	const origPush = window.history.pushState;
	if (origPush) window.history.pushState = function(...args) {
		origPush.apply(this, args);
		syncLocale();
	};
	const origReplace = window.history.replaceState;
	if (origReplace) window.history.replaceState = function(...args) {
		origReplace.apply(this, args);
		syncLocale();
	};
	if (typeof MutationObserver !== "undefined" && typeof document !== "undefined" && document.documentElement) new MutationObserver((mutations) => {
		for (const mutation of mutations) if (mutation.type === "attributes" && mutation.attributeName === "lang") syncLocale();
	}).observe(document.documentElement, {
		attributes: true,
		attributeFilter: ["lang"]
	});
	if (document.readyState === "loading") document.addEventListener("DOMContentLoaded", syncLocale);
	else syncLocale();
}
//#endregion
//#region \\0virtual:zintl/runtime/store-server
var storage = new AsyncLocalStorage();
setStoreStorage(storage);
function serializeValue(val) {
	if (typeof val === "function") return val.toString();
	if (val === null) return "null";
	if (val === void 0) return "undefined";
	if (typeof val === "string") return JSON.stringify(val);
	if (typeof val === "number" || typeof val === "boolean") return val.toString();
	if (Array.isArray(val)) return "[" + val.map(serializeValue).join(",") + "]";
	if (typeof val === "object") return "{" + Object.entries(val).map(([k, v]) => \`\${JSON.stringify(k)}:\${serializeValue(v)}\`).join(",") + "}";
	return "null";
}
function injectIntoStream(stream, store) {
	const reader = stream.getReader();
	const encoder = new TextEncoder();
	const decoder = new TextDecoder();
	let injected = false;
	return new ReadableStream({
		async pull(controller) {
			try {
				const { done, value } = await reader.read();
				if (done) {
					if (!injected) {
						const catalogs = store.catalogs;
						if (Object.keys(catalogs).length > 0) {
							const script = \`<script id="zintl-baked-catalogs">window.__zintl_baked_catalogs = \${serializeValue(catalogs)};window.__zintl_locales = \${JSON.stringify(store.locales)};<\\/script>\`;
							controller.enqueue(encoder.encode(script));
						}
						injected = true;
					}
					controller.close();
					return;
				}
				let chunkText = "";
				if (value instanceof Uint8Array) chunkText = decoder.decode(value, { stream: true });
				else if (typeof value === "string") chunkText = value;
				if (!injected) if (chunkText.includes("</body>")) {
					const catalogs = store.catalogs;
					const script = Object.keys(catalogs).length > 0 ? \`<script id="zintl-baked-catalogs">window.__zintl_baked_catalogs = \${serializeValue(catalogs)};window.__zintl_locales = \${JSON.stringify(store.locales)};<\\/script>\` : "";
					chunkText = chunkText.replace("</body>", \`\${script}</body>\`);
					injected = true;
					controller.enqueue(encoder.encode(chunkText));
				} else if (chunkText.includes("</html>")) {
					const catalogs = store.catalogs;
					const script = Object.keys(catalogs).length > 0 ? \`<script id="zintl-baked-catalogs">window.__zintl_baked_catalogs = \${serializeValue(catalogs)};window.__zintl_locales = \${JSON.stringify(store.locales)};<\\/script>\` : "";
					chunkText = chunkText.replace("</html>", \`\${script}</html>\`);
					injected = true;
					controller.enqueue(encoder.encode(chunkText));
				} else controller.enqueue(value instanceof Uint8Array ? value : encoder.encode(chunkText));
				else controller.enqueue(value instanceof Uint8Array ? value : encoder.encode(chunkText));
			} catch (err) {
				controller.error(err);
			}
		},
		cancel(reason) {
			return reader.cancel(reason);
		}
	});
}
function injectBakedCatalogs(result, store) {
	if (!result || !store) return result;
	if (typeof Response !== "undefined" && result instanceof Response) {
		if (result.body && typeof result.body.getReader === "function") {
			const transformedBody = injectIntoStream(result.body, store);
			return new Response(transformedBody, {
				status: result.status,
				statusText: result.statusText,
				headers: result.headers
			});
		}
		return result.text().then((html) => {
			if (html.includes("</body>") || html.includes("</html>")) {
				const modifiedHtml = injectBakedCatalogs(html, store);
				return new Response(modifiedHtml, {
					status: result.status,
					statusText: result.statusText,
					headers: result.headers
				});
			}
			return new Response(html, {
				status: result.status,
				statusText: result.statusText,
				headers: result.headers
			});
		});
	}
	if (typeof result === "string") {
		const catalogs = store.catalogs;
		if (Object.keys(catalogs).length > 0) {
			const script = \`<script id="zintl-baked-catalogs">window.__zintl_baked_catalogs = \${serializeValue(catalogs)};window.__zintl_locales = \${JSON.stringify(store.locales)};<\\/script>\`;
			if (result.includes("</body>")) return result.replace("</body>", \`\${script}</body>\`);
			if (result.includes("</html>")) return result.replace("</html>", \`\${script}</html>\`);
			const lower = result.toLowerCase();
			if (lower.includes("<!doctype") || lower.includes("<html") || lower.includes("<body")) return result + script;
			return result;
		}
	}
	if (typeof result === "object") {
		if (typeof result.getReader === "function") return injectIntoStream(result, store);
		else if (result.htmlStream && typeof result.htmlStream.getReader === "function") result.htmlStream = injectIntoStream(result.htmlStream, store);
		else if (result.body && typeof result.body.getReader === "function") result.body = injectIntoStream(result.body, store);
		else if (typeof result.html === "string") result.html = injectBakedCatalogs(result.html, store);
		else if (typeof result.body === "string") result.body = injectBakedCatalogs(result.body, store);
	}
	return result;
}
function runInRequestScope(urlOrReq, locales, defaultLocale, callback) {
	let locale = defaultLocale;
	if (urlOrReq) {
		let pathname = "";
		const extractPath = (val) => {
			if (!val) return "";
			if (typeof val === "string") return val;
			if (typeof val === "object") {
				if (val.url) return typeof val.url === "string" ? val.url : val.url.pathname || String(val.url);
				if (typeof val.path === "string") return val.path;
				if (typeof val.pathname === "string") return val.pathname;
				if (val.navigationContext) {
					const nav = val.navigationContext;
					if (typeof nav.pathname === "string") return nav.pathname;
				}
			}
			return "";
		};
		if (Array.isArray(urlOrReq)) for (const arg of urlOrReq) {
			pathname = extractPath(arg);
			if (pathname) break;
		}
		else pathname = extractPath(urlOrReq);
		if (pathname) {
			pathname = pathname.split("?")[0].split("#")[0];
			if (pathname.includes("://")) try {
				pathname = new URL(pathname).pathname;
			} catch {
				pathname = pathname.replace(/^https?:\\/\\/[^/]+/, "");
			}
			else {
				pathname = pathname.replace(/^[^/]+:\\d+/, "");
				pathname = pathname.replace(/^[^/]+\\.[^/]+/, "");
			}
			const parts = pathname.split("/").filter(Boolean);
			if (parts.length > 0 && locales.includes(parts[0])) locale = parts[0];
		}
	}
	const store = new I18nStore();
	store.locale = locale;
	store.locales = locales;
	if (typeof globalThis !== "undefined") globalThis.__zintl_active = store;
	const promises = [];
	for (const [_, loader] of globalRegistry.entries()) try {
		const result = loader(locale);
		const processResult = (res) => {
			if (!res) return;
			store.addCatalogs({ [locale]: res });
		};
		if (isThenable(result)) promises.push(result.then((res) => {
			processResult(res);
		}));
		else processResult(result);
	} catch {}
	const runCallback = () => {
		return storage.run(store, () => {
			const result = callback();
			const processStorePromisesAndInject = (resolvedResult) => {
				if (store.pendingPromises.length > 0) {
					const currentPromises = [...store.pendingPromises];
					store.pendingPromises = [];
					return Promise.all(currentPromises).then(() => {
						return processStorePromisesAndInject(resolvedResult);
					});
				}
				return injectBakedCatalogs(resolvedResult, store);
			};
			if (result && typeof result.then === "function") return result.then((resolvedResult) => {
				return processStorePromisesAndInject(resolvedResult);
			});
			if (store.pendingPromises.length > 0) return processStorePromisesAndInject(result);
			return injectBakedCatalogs(result, store);
		});
	};
	if (promises.length > 0) return Promise.all(promises).then(runCallback);
	return runCallback();
}
setRunInRequestScope(runInRequestScope);
//#endregion
//#region \\0virtual:zintl/runtime/resolver
function _t(key, params = {}, options) {
	const instance = getActiveInstance();
	const catalogs = instance.catalogs;
	const locale = instance.locale;
	const effectiveParams = options ? {
		...params,
		...options
	} : params;
	const mgr = effectiveParams._mgr;
	const boundaryId = mgr?.id;
	const targetBId = effectiveParams._bId || boundaryId;
	const boundaryCatalog = targetBId ? catalogs[locale]?.[targetBId] : void 0;
	let message = boundaryCatalog ? boundaryCatalog[key] : void 0;
	if (message === void 0) if (mgr) {
		if (typeof window === "undefined") {
			if (mgr.loader) try {
				const result = mgr.loader(locale);
				if (result && typeof result.then !== "function") {
					instance.addCatalogs({ [locale]: result });
					const boundaryCatalogAfter = targetBId ? instance.catalogs[locale]?.[targetBId] : void 0;
					message = boundaryCatalogAfter ? boundaryCatalogAfter[key] : void 0;
				} else if (result && typeof result.then === "function") instance.loadLazyBoundary(mgr.id, mgr.loader);
			} catch {}
		} else if (mgr.loader) Promise.resolve().then(() => {
			instance.loadLazyBoundary(mgr.id, mgr.loader);
		});
		if (message === void 0) return \`\`;
	} else return \`\`;
	if (typeof message === "function") return message(params);
	if (typeof message !== "string") return "";
	const { _mgr, _bId, _tags, ...restParams } = effectiveParams;
	let interpolated = interpolate(message, restParams);
	if (_tags && Array.isArray(_tags)) for (const entry of _tags) {
		interpolated = interpolated.replaceAll(\`<\${entry.alias}/>\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`<\${entry.alias} />\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`<\${entry.alias}>\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`</\${entry.alias}>\`, \`</\${entry.tagName}>\`);
	}
	return interpolated;
}
function interpolate(message, params) {
	if (message === null || message === void 0) return "";
	return String(message).replace(/\\{(\\w+)\\}/g, (match, key) => {
		return params[key]?.toString() ?? match;
	});
}
//#endregion
//#region \\0virtual:zintl/runtime/internal
/**
* Loads and configures the i18n instance for a boundary.
* Registers loaders and merges new catalogs into the existing state.
*
* INTERNAL: Targeted by the compiler after zintl() macro expansion.
*/
async function loadI18nInstance(config = {}) {
	const store = new I18nStore();
	setActiveInstance(store);
	if (typeof globalThis !== "undefined") globalThis.__zintl_active = store;
	try {
		if (config.debug !== void 0) store.debug = config.debug;
		if (config.locale) store.locale = config.locale;
		if (config.catalogs) {
			store.addCatalogs(config.catalogs);
			const active = getActiveInstance();
			if (active && active !== store) active.addCatalogs(config.catalogs);
		}
		const promises = [];
		if (config.loaders) for (const [boundaryId, loader] of Object.entries(config.loaders)) {
			const res = registerLoader(boundaryId, loader);
			if (res && typeof res.then === "function") promises.push(res);
		}
		if (config.locale) promises.push(store.setLocale(config.locale));
		if (promises.length > 0) await Promise.all(promises);
	} finally {}
	return {
		locale: store.locale,
		get debug() {
			return store.debug;
		},
		set debug(value) {
			store.debug = value;
		},
		setLocale: (l) => store.setLocale(l),
		subscribe: (cb) => store.subscribe(cb),
		t: (key, params) => {
			const prev = getActiveInstance();
			setActiveInstance(store);
			try {
				return _t(key, params);
			} finally {
				setActiveInstance(prev);
			}
		}
	};
}
//#endregion
//#region \\0virtual:zintl/manager/none/entry:b_f0c6267f2b46
var entry_b_f0c6267f2b46_default = {
	id: "b_f0c6267f2b46",
	loader: (locale) => {
		switch (locale) {
			case "en": return { "b_f0c6267f2b46": {
				"90e40d50": "Get started",
				"e2aae512": "Edit <code>src/main.ts</code> and save to test <code>HMR</code>",
				"9e9cf322": "Documentation",
				"d0f7666b": "Your questions, answered",
				"e49cb0ee": "Explore Vite",
				"824d76b1": "Learn more",
				"65ac13a7": "Connect with us",
				"15545bc4": "Join the Vite community",
				"5442e2b6": "GitHub",
				"bccc14ee": "Discord",
				"b3c83ea6": "X.com",
				"daf16c03": "Bluesky"
			} };
			case "ar": return import("./entry_b_f0c6267f2b46.js").then((m) => m.default);
			case "es": return import("./entry_b_f0c6267f2b462.js").then((m) => m.default);
			case "zh": return import("./entry_b_f0c6267f2b463.js").then((m) => m.default);
			default: return {};
		}
	},
	manifest: []
};
//#endregion
//#region \\0virtual:zintl/manager/none/entry:b_764631960fa9
var entry_b_764631960fa9_default = {
	id: "b_764631960fa9",
	loader: (locale) => {
		switch (locale) {
			case "en": return { "b_f05b8e5701f3": { "3aaf6932": (params) => {
				const { counter } = params;
				return \`Count is \${params["counter"]}\`;
			} } };
			case "ar": return import("./entry_b_764631960fa9.js").then((m) => m.default);
			case "es": return import("./entry_b_764631960fa92.js").then((m) => m.default);
			case "zh": return import("./entry_b_764631960fa93.js").then((m) => m.default);
			default: return {};
		}
	},
	manifest: []
};
//#endregion
//#region examples/vanilla-ssr/src/assets/typescript.svg
var typescript_default = "data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20aria-hidden='true'%20width='32'%20height='32'%20viewBox='0%200%20256%20256'%3e%3cpath%20fill='%23007ACC'%20d='M0%20128v128h256V0H0z'/%3e%3cpath%20fill='%23FFF'%20d='m56.612%20128.85l-.081%2010.483h33.32v94.68h23.568v-94.68h33.321v-10.28c0-5.69-.122-10.444-.284-10.566c-.122-.162-20.4-.244-44.983-.203l-44.74.122l-.121%2010.443Zm149.955-10.742c6.501%201.625%2011.459%204.51%2016.01%209.224c2.357%202.52%205.851%207.111%206.136%208.208c.08.325-11.053%207.802-17.798%2011.988c-.244.162-1.22-.894-2.317-2.52c-3.291-4.795-6.745-6.867-12.028-7.233c-7.76-.528-12.759%203.535-12.718%2010.321c0%201.992.284%203.17%201.097%204.795c1.707%203.536%204.876%205.649%2014.832%209.956c18.326%207.883%2026.168%2013.084%2031.045%2020.48c5.445%208.249%206.664%2021.415%202.966%2031.208c-4.063%2010.646-14.14%2017.879-28.323%2020.276c-4.388.772-14.79.65-19.504-.203c-10.28-1.828-20.033-6.908-26.047-13.572c-2.357-2.6-6.949-9.387-6.664-9.874c.122-.163%201.178-.813%202.356-1.504c1.138-.65%205.446-3.129%209.509-5.485l7.355-4.267l1.544%202.276c2.154%203.29%206.867%207.801%209.712%209.305c8.167%204.307%2019.383%203.698%2024.909-1.26c2.357-2.153%203.332-4.388%203.332-7.68c0-2.966-.366-4.266-1.91-6.501c-1.99-2.845-6.054-5.242-17.595-10.24c-13.206-5.69-18.895-9.224-24.096-14.832c-3.007-3.25-5.852-8.452-7.03-12.8c-.975-3.617-1.22-12.678-.447-16.335c2.723-12.76%2012.353-21.659%2026.25-24.3c4.51-.853%2014.994-.528%2019.424.569Z'/%3e%3c/svg%3e";
//#endregion
//#region examples/vanilla-ssr/src/assets/vite.svg
var vite_default = "/assets/vite-BF8QNONU.svg";
//#endregion
//#region examples/vanilla-ssr/src/assets/hero.png
var hero_default = "/assets/hero-CLDdwZDr.png";
//#endregion
//#region examples/vanilla-ssr/src/switcher.ts
var locales = [
	{
		id: "en",
		name: "English"
	},
	{
		id: "ar",
		name: "العربية"
	},
	{
		id: "es",
		name: "Español"
	},
	{
		id: "zh",
		name: "中文"
	}
];
function LocaleSwitcher(_url) {
	const lang = _url.split("/")[1] || "en";
	return locales.map((l) => \`
    <button data-lang="\${l.id}" class="\${lang === l.id ? "active" : ""}">
      <a href="/\${l.id}/">\${l.name}</a>
    </button>
  \`).join("");
}
//#endregion
//#region examples/vanilla-ssr/src/entry-server.ts
async function _zintl_raw_render(_url) {
	await (globalThis.__zintl_inst = loadI18nInstance({ loaders: {
		["b_764631960fa9"]: entry_b_764631960fa9_default.loader,
		["b_f0c6267f2b46"]: entry_b_f0c6267f2b46_default.loader
	} }));
	return { html: { text: \`
    <section id="header">
      <div class="switcher">\${LocaleSwitcher(_url)}</div>
      <div class="vertical-ticks"></div>
      <div class="icon-border"><svg class="icon" role="img" aria-hidden="true"><use href="/icons.svg#translate-icon"></use></svg></div>
    </section>

    <div class="ticks"></div>

    <section id="center">
      <div class="hero">
        <img src="\${hero_default}" class="base" width="170" height="179" />
        <img src="\${typescript_default}" class="framework" alt="TypeScript logo" />
        <img src="\${vite_default}" class="vite" alt="Vite logo" />
      </div>
      <div>
        <h1>\${_t("90e40d50", {
		_mgr: entry_b_f0c6267f2b46_default,
		_bId: "b_f0c6267f2b46"
	})}</h1>
        <p>\${_t("e2aae512", {
		_mgr: entry_b_f0c6267f2b46_default,
		_bId: "b_f0c6267f2b46",
		_tags: [{
			"alias": "code",
			"originalOpen": "<code>",
			"tagName": "code"
		}]
	})}</p>
      </div>
      <button id="counter" type="button" class="counter"></button>
    </section>

    <div class="ticks"></div>

    <section id="next-steps">
      <div id="docs">
        <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#documentation-icon"></use></svg>
        <h2>\${_t("9e9cf322", {
		_mgr: entry_b_f0c6267f2b46_default,
		_bId: "b_f0c6267f2b46"
	})}</h2>
        <p>\${_t("d0f7666b", {
		_mgr: entry_b_f0c6267f2b46_default,
		_bId: "b_f0c6267f2b46"
	})}</p>
        <ul>
          <li>
            <a href="https://vite.dev/" target="_blank">
              <img class="logo" src="\${vite_default}" alt="" />
              \${_t("e49cb0ee", {
		_mgr: entry_b_f0c6267f2b46_default,
		_bId: "b_f0c6267f2b46"
	})}
            </a>
          </li>
          <li>
            <a href="https://www.typescriptlang.org" target="_blank">
              <img class="button-icon" src="\${typescript_default}" alt="" />
              \${_t("824d76b1", {
		_mgr: entry_b_f0c6267f2b46_default,
		_bId: "b_f0c6267f2b46"
	})}
            </a>
          </li>
        </ul>
      </div>
      <div id="social">
        <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#social-icon"></use></svg>
        <h2>\${_t("65ac13a7", {
		_mgr: entry_b_f0c6267f2b46_default,
		_bId: "b_f0c6267f2b46"
	})}</h2>
        <p>\${_t("15545bc4", {
		_mgr: entry_b_f0c6267f2b46_default,
		_bId: "b_f0c6267f2b46"
	})}</p>
        <ul>
          <li><a href="https://github.com/vitejs/vite" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#github-icon"></use></svg>\${_t("5442e2b6", {
		_mgr: entry_b_f0c6267f2b46_default,
		_bId: "b_f0c6267f2b46"
	})}</a></li>
          <li><a href="https://chat.vite.dev/" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#discord-icon"></use></svg>\${_t("bccc14ee", {
		_mgr: entry_b_f0c6267f2b46_default,
		_bId: "b_f0c6267f2b46"
	})}</a></li>
          <li><a href="https://x.com/vite_js" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#x-icon"></use></svg>\${_t("b3c83ea6", {
		_mgr: entry_b_f0c6267f2b46_default,
		_bId: "b_f0c6267f2b46"
	})}</a></li>
          <li><a href="https://bsky.app/profile/vite.dev" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#bluesky-icon"></use></svg>\${_t("daf16c03", {
		_mgr: entry_b_f0c6267f2b46_default,
		_bId: "b_f0c6267f2b46"
	})}</a></li>
        </ul>
      </div>
    </section>

    <div class="ticks"></div>
    <section id="spacer"></section>
  \` }.text };
}
async function render(urlOrReq, ...args) {
	return runInRequestScope$1([urlOrReq, ...args], [
		"en",
		"ar",
		"es",
		"zh"
	], "en", () => _zintl_raw_render(urlOrReq, ...args));
}
//#endregion
export { render };
"
`;

exports[`Example Proof: vanilla-ssr > should match Production snapshots (Baking) > vanilla-ssr/prod-transforms/index.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>vanilla-ssr</title>
    <!--app-head-->
  </head>
  <body>
    <div id="app"><!--app-html--></div>
    <script type="module" src="/src/entry-client.ts"></script>
  </body>
</html>"
`;

exports[`Example Proof: vanilla-ssr > should match Production snapshots (Baking) > vanilla-ssr/prod-transforms/src/counter.ts 1`] = `
"export function setupCounter(element: HTMLButtonElement) {
  let counter = 0;
  const setCounter = (count: number) => {
    counter = count;
    element.innerHTML = \`Count is \${counter}\`;
  };
  element.addEventListener("click", () => setCounter(counter + 1));
  setCounter(0);
}"
`;

exports[`Example Proof: vanilla-ssr > should match Production snapshots (Baking) > vanilla-ssr/prod-transforms/src/entry-client.ts 1`] = `
"import "./style.css";
import { setupCounter } from "./counter";



setupCounter(document.querySelector("#counter") as HTMLButtonElement);"
`;

exports[`Example Proof: vanilla-ssr > should match Production snapshots (Baking) > vanilla-ssr/prod-transforms/src/entry-server.ts 1`] = `
"import typescriptLogo from "./assets/typescript.svg";
import viteLogo from "./assets/vite.svg";
import heroImg from "./assets/hero.png";

import { LocaleSwitcher } from "./switcher";

export async function render(_url: string) {
  

  const res = {
    text: \`
    <section id="header">
      <div class="switcher">\${LocaleSwitcher(_url)}</div>
      <div class="vertical-ticks"></div>
      <div class="icon-border"><svg class="icon" role="img" aria-hidden="true"><use href="/icons.svg#translate-icon"></use></svg></div>
    </section>

    <div class="ticks"></div>

    <section id="center">
      <div class="hero">
        <img src="\${heroImg}" class="base" width="170" height="179" />
        <img src="\${typescriptLogo}" class="framework" alt="TypeScript logo" />
        <img src="\${viteLogo}" class="vite" alt="Vite logo" />
      </div>
      <div>
        <h1>Get started</h1>
        <p>Edit <code>src/main.ts</code> and save to test <code>HMR</code></p>
      </div>
      <button id="counter" type="button" class="counter"></button>
    </section>

    <div class="ticks"></div>

    <section id="next-steps">
      <div id="docs">
        <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#documentation-icon"></use></svg>
        <h2>Documentation</h2>
        <p>Your questions, answered</p>
        <ul>
          <li>
            <a href="https://vite.dev/" target="_blank">
              <img class="logo" src="\${viteLogo}" alt="" />
              Explore Vite
            </a>
          </li>
          <li>
            <a href="https://www.typescriptlang.org" target="_blank">
              <img class="button-icon" src="\${typescriptLogo}" alt="" />
              Learn more
            </a>
          </li>
        </ul>
      </div>
      <div id="social">
        <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#social-icon"></use></svg>
        <h2>Connect with us</h2>
        <p>Join the Vite community</p>
        <ul>
          <li><a href="https://github.com/vitejs/vite" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#github-icon"></use></svg>GitHub</a></li>
          <li><a href="https://chat.vite.dev/" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#discord-icon"></use></svg>Discord</a></li>
          <li><a href="https://x.com/vite_js" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#x-icon"></use></svg>X.com</a></li>
          <li><a href="https://bsky.app/profile/vite.dev" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#bluesky-icon"></use></svg>Bluesky</a></li>
        </ul>
      </div>
    </section>

    <div class="ticks"></div>
    <section id="spacer"></section>
  \`,
  };
  return { html: res.text };
}"
`;

exports[`Example Proof: vanilla-ssr > should match Production snapshots (Baking) > vanilla-ssr/prod-transforms/src/switcher.ts 1`] = `
"const locales = [
  { id: "en", name: "English" },
  { id: "ar", name: "العربية" },
  { id: "es", name: "Español" },
  { id: "zh", name: "中文" },
];

export function LocaleSwitcher(_url: string) {
  const lang = (_url.split("/")[1] as any) || "en";

  return locales
    .map(
      (l) => \`
    <button data-lang="\${l.id}" class="\${lang === l.id ? "active" : ""}">
      <a href="/\${l.id}/">\${l.name}</a>
    </button>
  \`,
    )
    .join("");

  // element.querySelectorAll("button").forEach((btn) => {
  //   btn.addEventListener("click", () => {
  //     const newLang = (btn as HTMLElement).dataset.lang!;
  //     window.history.pushState({}, "", \`/\${newLang}\`);
  //   });
  // });
}"
`;
